--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
     <h1 id="hello">Hi, I am Fatou</h1>
         <img src="glasses.jpg" class="img-circle" alt="Sunglasses">
 
-        <p>
-          This is my first web page.</p>
-        <p>You will get to know me a bit.
-        </p>
+        <p class="firstp">Welcome to my webpage.</p>
+        <p class="secondp">Let's get to know each other.</p>
 
-    <a href="#" target="_blank" class="btn">
-      What I like to do
+    <a href="https://www.marseille.fr/" target="_blank" class="btn">
+      What I like
     </a>
   </div>
 
@@ -29,9 +27,9 @@
     <h2 class="followme">Follow me</h2>
     <div class="links"></div>
       <ul class="socialnet">
-        <li><a href="https://" target="_blank"><i class="fa-brands fa-github" id="icone"></i></li></a>
-        <li><a href="https://" target="_blank"><i class="fa-brands fa-twitter" id="icone"></i></li></a>
-        <li><a href="https://" target="_blank"><i class="fa-brands fa-medium" id="icone>"></i></li></a>
+        <li><a href="https://" target="_blank"><i class="fab fa-github" id="icone"></i></li></a>
+        <li><a href="https://" target="_blank"><i class="fab fa-twitter" id="icone"></i></li></a>
+        <li><a href="https://" target="_blank"><i class="fab fa-medium" id="icone>"></i></li></a>
       </ul>
     </div>
   </div>
